# gbdc

./: .gitignore  CMakeLists.txt  README.md  before_build.sh  build_test.sh  install-pymod.sh  instdeps.sh  pyproject.toml  setup.py
.github/workflows/: build_test.yml  build_wheels.yml  build_wheels2.yml
src/: CMakeLists.txt  Main.cc  gbdlib.cc  gbdlib.h
src/extract/: CMakeLists.txt  CNFBaseFeatures.cc  CNFBaseFeatures.h  CNFGateFeatures.cc  CNFGateFeatures.h  IExtractor.h  MCNFBaseFeatures.h  MultiObjective.h  OPBBaseFeatures.cc  OPBBaseFeatures.h  Util.h  WCNFBaseFeatures.cc  WCNFBaseFeatures.h
src/extract/gates/: GateAnalyzer.h  GateFormula.h
src/identify/: GBDHash.h  ISOHash.h
src/test/: CMakeLists.txt  Util.h  tests_feature_extraction.cc  tests_gbdlib.cc  tests_streamcompressor.cc  tests_threadpool.cc
src/test/resources/expected_records/: cnf_base.txt  wcnf_base.txt
src/test/resources/test_files/: 00bb0b4ef28ed38c49de4c54b9fabc4d-25_2.cnf.xz  017ba03ed108f492c9293c7c95e5cae9-multiplier_14bits__miter_14.cnf.xz  028d0cc7af63e9bba5795f20e24db4f6-pyhala-braun-sat-35-4-04.shuffled.cnf.xz  0297c2a35f116ffd5382aea5b421e6df-Urquhart-s3-b3.shuffled-as.sat03-1556.cnf.xz  037c423f56548082b1935e88c48ffdda-3col120_5_2.shuffled.cnf.xz  03de316ba1e90305471a3b8620cb9cd7-satsgi-n23himBHm26-p0-q248.cnf.xz  0945c95ba9b82c32d12fc9d9e5229c5a-SC23_Timetable_C_473_E_45_Cl_32_D_6_T_50.cnf.xz  1f215812371f0c428eb1f1e51f9f23d7-20_2.cnf.xz  275d36e3f246990dccd094e5e1442ba9-WS_500_32_50_10.apx_2_DC-AD.cnf.xz  27b4fe4cb0b4e2fd8327209ca5ff352c-grid_10_20.shuffled.cnf.xz  2902c241b2196f5fd914509fdc124ba7-REGRandom-K4-L2-Seed20.cnf.xz  328da7966b09b2f6e99c93c4e877fbff-sgen3-n260-s62321009-sat.cnf.xz
src/transform/: CMakeLists.txt  IndependentSet.h  cnf2bip.h
src/util/: CMakeLists.txt  CaptureDistribution.cc  CaptureDistribution.h  ResourceLimits.h  StreamBuffer.h  UnionFind.cc  UnionFind.h
src/util/threadpool/: LockedQueue.h  MemoryManagement.h  ThreadPool.h  TrackingAllocator.h  Util.h
test/: CMakeLists.txt  Util.h  tests_feature_extraction.cc  tests_gbdlib.cc  tests_streamcompressor.cc
test/resources/expected_records/: cnf_base.txt  cnf_gates.txt  opb_base.txt  wcnf_base.txt
test/resources/test_files/: 00076733bdbce94d7e44eca84f1425f0-vlsat2_16297_1562268.dimacs.cnf.xz  03a43a7ea55217f53542ed3f029963af-satch2ways16w.cnf.xz  0a4ed112f2cdc0a524976a15d1821097-cliquecoloring_n12_k9_c8.cnf.xz  18416a9ac0909dce5fa96345f784c87e-intervals122.cnf.xz  1ce81dbba1292bf791e194b17aa2a219-satch2ways15u.cnf.xz  1d1af993697599892804df5878d58979-brent_69_0.cnf.xz  1eea3d913d346b900252d77fc0cb25c8-par32-4.shuffled.cnf.xz  23c4e178c94c0dff82ea6c87abed7ecc-rphp_p60_r60.cnf.xz  246afd75cb97a21144f368c00252a656-BZ2File_write_11.cnf.xz  2722f39c27dc45a989bb52761ed52e50-31_1.cnf.xz  2a4680a801ad32ab8768030250daf0c8-ER_500_10_5.apx_2_DC-ST.cnf.xz  2d0c041c0fe72dc32527bfbf34f63e61-170223547.cnf.xz  opb_test.opb.xz  wcnf_test.wcnf.xz
